third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/repr_c.rs
#[derive(num_enum::IntoPrimitive)]
#[repr(C)]
enum Numbers {
    Zero,
    One,
}

fn main() {}
