third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/repr_c.stderr
error: repr(C) doesn't have a well defined size
 --> $DIR/repr_c.rs:2:8
  |
2 | #[repr(C)]
  |        ^
